@@ -275,7 +275,7 @@
 			var self = this;
 
 			// bind the close event to any element with the closeClass class
-			$('.' + this.opts.closeClass).live('click.simplemodal', function (e) {
+			$('.' + this.opts.closeClass).bind('click.simplemodal', function (e) {
 				e.preventDefault();
 				self.close();
 			});
@@ -302,7 +302,7 @@
 		 * Unbind events
 		 */
 		unbindEvents: function () {
-			$('.' + this.opts.closeClass).die('click.simplemodal');
+			$('.' + this.opts.closeClass).unbind('click.simplemodal');
 			$(window).unbind('resize.simplemodal');
 		},
 		/*
